--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <a href="#contacts">Контакты</a>
         </nav>
         <div>
+            Наш email: <a href="mailto:mail@mail.ru">mail1@mail.ru</a>
+        </div>
+        <div>
             <a href="tel:+79039999999">+7 903 999-99-99</a>
             <button>Заказать звонок</button>
         </div>
