--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <a href="tel:+79039999999">+7 903 999-99-99</a>
             <button>Заказать звонок</button>
         </div>
+        <div>
+            <button>Оставить отзыв</button>
+        </div>
+
+
     </header>
 </body>
 </html>
