modified review button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button>Заказать звонок</button>
         </div>
         <div>
-            <button>Оставить отзыв</button>
+            <button>Оставить отзыв о сайте</button>
         </div>
 
 
